Added dependency for Web & Mysql

--- a/build.gradle
+++ b/build.gradle
@@ -75,6 +75,9 @@ dependencies {
 
     compile "io.vertx:vertx-core:3.5.0"
     compile "io.vertx:vertx-lang-groovy:3.5.0"
+    compile 'io.vertx:vertx-web:3.5.0'
+    compile 'io.vertx:vertx-jdbc-client:3.5.0'
+
 }
 
 task wrapper(type: Wrapper) {
